--- a/Web Development Bootcamp/7 - Tin Dog/css/styles.css
+++ b/Web Development Bootcamp/7 - Tin Dog/css/styles.css
@@ -1,3 +1,5 @@
+/* HTML Elements */
+
 *{
     margin: 0;
     padding: 0;
@@ -19,7 +21,7 @@ p{
     color: #8f8f8f;
 }
 
-/* Headings and Containers */
+/* Headings*/
 
 .big-heading{
     font-family: "Montserrat", sans-serif;
@@ -32,8 +34,21 @@ p{
     line-height: 1.5;
 }
 
+/* Containers */
+
 .container-fluid{
     padding: 7% 15%;
+}
+
+/* Sections  */
+
+.colored-section{
+    background-color: #ff4c68;
+    color: white;
+}
+
+.white-section{
+        background-color: white;
 }
 
 /* Download Buttons(Title Section and Call to Action section) */
@@ -65,13 +80,8 @@ p{
 
 /* Title Section */
 
-#title{
-    background-color:#ff4c68;
-    color: white;
-    text-align: left;
-}
-
 #title .container-fluid{
+    text-align: left;
     padding: 3% 15% 10%;
 }
 
@@ -125,7 +135,6 @@ p{
 
 #testimonials{
     background-color: #ef8172;
-    color: white;
 }
 
 
@@ -172,10 +181,11 @@ p{
 }
 
 /* Call To Action section */
-#cta{
+
+/* #cta{
     background-color: #ff4c68;
     color: white;
-}
+} */
 
 /* .cta-heading{
     font-size: 3rem;
@@ -184,8 +194,8 @@ p{
 
 
 /* Footer Section */
+
 #footer{
-    background-color: white;
     padding: 3% 7%;
 }
 
