--- a/Mutant MMA Academy/styles/style.css
+++ b/Mutant MMA Academy/styles/style.css
@@ -2,6 +2,10 @@ h1, h2, h3, h4, h5, h6, p:hover{
     cursor: default;
 }
 
+.align-center{
+    text-align: center;
+}
+
 .navbar .logo{
     height: 7rem;
     width: 7rem;
@@ -51,6 +55,76 @@ h1, h2, h3, h4, h5, h6, p:hover{
     font-weight: 500;
 }
 
+/* Contact Section:  */
+
+#contact{
+    /* background-color: #4E9F3D; */
+    color: black; 
+    padding: 3rem 0;
+    display: block;
+    position: relative;
+}
+
+#contact::after{
+    content: "";
+    background: url("../images/contact.jpg");
+    background-size: 100% 100%;
+    /* background-size: contain; */
+    background-repeat: no-repeat;
+    /* opacity: 0.7; */
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;   
+}
+
+.contact-heading{
+    color: #D8E9A8;
+    font-weight: bold;
+    font-size: 3.4rem;
+}
+
+.contact-form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact-form input{
+    background: transparent;
+    border: 1px solid #1E5128;
+    margin: 3px 0;
+    width: 20rem;
+}
+
+::placeholder{
+    color: #D8E9A8;
+}
+
+.contact-form textarea{
+    width: 188px;
+    background: transparent;
+    height: 100px;
+    width: 20rem;
+    border: 1px solid #1E5128;
+}
+
+.contact-button{
+    background-color: #D8E9A8;
+    color: black;
+    border: 2px solid black;
+    display: block;
+    margin: auto;
+    font-weight: bold;
+}
+
+.contact-button:hover{
+    background-color: #1E5128;
+    color: #D8E9A8;
+}
+
 /* Footer Section */
 
 #footer{
@@ -77,3 +151,25 @@ h1, h2, h3, h4, h5, h6, p:hover{
 #footer .icons{
     padding: 1.2rem;
 }
+
+
+/* Up Arrow */
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: #4E9F3D; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 10px; /* Increase font size */
+  }
+  
+  #myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+  }
